Fix submit button height on firefox.

--- a/toolkit/toolkit-looknfeel/src/main/less/skins/default/views/analytics/report.less
+++ b/toolkit/toolkit-looknfeel/src/main/less/skins/default/views/analytics/report.less
@@ -142,8 +142,12 @@
             .buttons {
                 width: 100%;
                 text-align: center;
+                vertical-align: middle;
+                input.btn {
+                    height: @button-height + @border-width + @border-width;
+                }
                 .btn {
-                    height: 100%;
+                    height: @button-height;
                 }
             }
             
